# calc-server-nats

./: README.md
poetry-demo/: .pre-commit-config.yaml  pyproject.toml  tox.ini
poetry-demo/poetry_demo/: calc_server.py  clinet_server_rest.py
poetry-demo/tests/: test_calc.py
poetry_demo/: pyproject.toml  tox.ini
poetry_demo/poetry_demo/: calc_server.py  clinet_server_nats.py  clinet_server_rest.py
poetry_demo/tests/: test_calc.py
